<resources>
    <string name="app_name">SantanderDevWeek</string>
    <string name="text_saldo_disponivel">Saldo disponivel</string>
    <string name="saldo_limite">Saldo - Limite</string>
    <string name="ver_extrato">Ver Extrato</string>
    <string name="txtv_pagar">Pagar</string>
    <string name="txtv_transferir">Transferir</string>
    <string name="txtv_recarregar">Recarregar</string>
    <string name="txtv_cartaofinal">Cartão Final</string>
</resources>