<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.MainActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="@string/app_name"
        app:titleTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/redPrimary"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarMenu" />

    <TextView
        android:id="@+id/tvUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Olá, Igor"
        android:layout_margin="16dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarMenu"
        />

    <TextView
        android:id="@+id/tvAgencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ag 2030"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/tvUsuario"
        app:layout_constraintTop_toBottomOf="@id/tvUsuario"
        />

    <TextView
        android:id="@+id/tvContaC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cc 10977584-4"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@id/tvAgencia"
        app:layout_constraintTop_toTopOf="@id/tvAgencia"
        />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardConta"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvAgencia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivSaldo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_update_black_24dp"
                android:layout_margin="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>
            <TextView
                android:id="@+id/tv_saldo_disponivel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:textSize="18sp"
                android:text="@string/text_saldo_disponivel"
                app:layout_constraintTop_toTopOf="@id/ivSaldo"
                app:layout_constraintLeft_toRightOf="@id/ivSaldo"
                app:layout_constraintTop_toBottomOf="@id/ivSaldo"/>
            <ImageView
                android:id="@+id/ivUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:src="@drawable/ic_expand_less_black_24dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <TextView
                android:id="@+id/tvSaldo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="R$ 1.200,00"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@id/tv_saldo_disponivel"
                app:layout_constraintStart_toStartOf="@id/ivSaldo"/>

            <TextView
                android:id="@+id/tv_saldo_limite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saldo_limite"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/tvSaldo"
                app:layout_constraintStart_toStartOf="@id/tvSaldo"/>

            <TextView
                android:id="@+id/tvLimite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/tv_saldo_limite"
                app:layout_constraintTop_toTopOf="@id/tv_saldo_limite"
                android:text="R$ 2.345,00"
                android:layout_marginLeft="8dp"/>

            <View
                android:id="@+id/vDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_margin="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_saldo_limite"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ver_extrato"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/vDivider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/redSecundary"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardPagar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardConta">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivPagar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_credit_card_black_24dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/tvPagar"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tvPagar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtv_pagar"
                app:layout_constraintTop_toBottomOf="@id/ivPagar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardTransferir"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        app:layout_constraintStart_toEndOf="@id/cardPagar"
        app:layout_constraintTop_toBottomOf="@id/cardConta">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivTransferir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_payments_black_24dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/tvTransferir"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tvTransferir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtv_transferir"
                app:layout_constraintTop_toBottomOf="@id/ivTransferir"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardRecarregar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        app:layout_constraintStart_toEndOf="@id/cardTransferir"
        app:layout_constraintTop_toBottomOf="@id/cardConta">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivRecarregar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_stay_primary_portrait_black_24dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/tvRecarregar"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tvRecarregar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtv_recarregar"
                app:layout_constraintTop_toBottomOf="@id/ivRecarregar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


    <ImageView
        android:id="@+id/ivCartaoFinal"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        android:background="@color/redPrimary"
        app:layout_constraintTop_toBottomOf="@id/cardPagar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tvCartaoFinal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtv_cartaofinal"
        android:textColor="@color/white"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toTopOf="@id/ivCartaoFinal"
        app:layout_constraintStart_toStartOf="@id/ivCartaoFinal"
        app:layout_constraintBottom_toBottomOf="@id/ivCartaoFinal"/>

    <TextView
        android:id="@+id/tvCartaoFinalDados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0033"
        android:textColor="@color/white"
        android:layout_marginLeft="16dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/tvCartaoFinal"
        app:layout_constraintTop_toTopOf="@id/tvCartaoFinal"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_expand_more_black_24dp"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="@id/ivCartaoFinal"
        app:layout_constraintBottom_toBottomOf="@id/ivCartaoFinal"
        app:layout_constraintTop_toTopOf="@id/ivCartaoFinal"/>


</androidx.constraintlayout.widget.ConstraintLayout>